Stacks 2.0 Beta 2 - Oct 19, 2017
--------------------------------
    Feature: gstacks: Made it possible to read from multiple BAM files at the same time; modified the
             interface accordingly.
    Feature: gstacks: Parallelized the reference-based mode.
    Feature: gstacks: Added various statistics & improvements to the log output.
    Feature: gstacks: Improved how the forward & paired-end reads are merged (in denovo mode; no more trimming).
    Feature: populations: Added code to calculate the overlap between RAD loci when a reference is available.
    Feature: populations: Added VCF ouput (--vcf).
    Feature: Updated the denovo_map.pl and ref_map.pl wrappers, samples must now be specified using --samples and --popmap.
    Bugfix: Fixed three memory leaks in populations; improved reference-aligned batch logic.
    Bugfix: Improved overlapping code in gstacks to merge more single and paired-end contigs together.
    Bugfix: Now compiles on Apple OS X.
    Bugfix: Fixed a bug that skewed the fixed-site (no-SNP) likelihood in the marukilow model.

Stacks 2.0 Beta 1 - Oct 09, 2017
--------------------------------
    Feature: Paired-end sequencing data can be utilized fully. In particular, when the shearing-based
             protocol is used, the software will assemble a local contig from the paired reads across
             the population, possibly overlap it with the forward-reads region, then align all reads to the
             assembled contig. This new approach also fully supports double-digest protocols.
    Feature: Haplotype calling and diploidy-violation dectection now rely on a novel, more powerful algorithm.
    Feature: SNP and genotype-calling now uses the diploid models of Maruki and Lynch (2017).
    Feature: The rxstacks program has been replaced with the gstacks program, and there is no need to re-run
	     some of the earlier steps of the pipeline anymore.